# jax-bessel-log

./: .gitignore  CLAUDE.md  README.md  benchmark_iv_log.py  benchmark_iv_log_single_order.py  iv_log_jax.py  pyproject.toml  u_polynomials.py
jax_bessel_log/: __init__.py  iv_log.py  iv_log_jax.py  jv_log.py
tests/: benchmark_iv_log.py  benchmark_iv_log_single_order.py  test_iv_log_jax.py
